# homelab-fedramp-low

./: .env.example  .gitignore  .gitleaks.toml  CLAUDE.md  LICENSE  Makefile  README.md  pipelines.sh  pyproject.toml
.github/workflows/: gitleaks.yml
deploy/defectdojo/: README.md  (+1 more)
deviation-requests/: FP-0001-ubuntu-esm-lag.md  FP-0002-package-installed-but-unreachable.md  FP-0003-qemu-guest-agent-hypervisor-cves.md  OR-0001-shared-tenancy.md  OR-0002-admin-only-trusted-input-tooling.md  RA-0001-grafana-exposure.md  README.md
docs/: crm-example.md
inventory/: IIW-2026-04.xlsx  IIW-2026-05.xlsx  overlay.yaml
oscal/: component-definition.json  ssp.json
pipelines/: __init__.py  cli.py
poam/: POAM-2026-05.xlsx  POAM-SUMMARY.md
runbooks/: apply-deviation-requests.py  cert-trust.md  conmon-apt-sweep.cron  conmon-apt-sweep.logrotate  conmon-apt-sweep.sh  monthly-conmon.md  regscale-manual-import.md  restore-from-pbs.md
significant-changes/: SCR-0001-capitol-signals-boundary.md
ssp/: README.md
templates/: FedRAMP-IIW-Template-Rev5.xlsx  README.md
tests/: test_cli.py  test_common_config.py  test_common_logging.py  test_common_schemas.py  test_defectdojo_client.py  test_defectdojo_push.py  test_inventory_ingest.py  test_oscal_component.py  test_oscal_poam.py  test_oscal_roundtrip.py  test_oscal_ssp.py  test_regscale_client.py  test_regscale_push.py  test_render_iiw.py  test_render_poam.py  test_verify_family.py  test_wazuh_client.py  test_wazuh_indexer.py  test_wazuh_vulns_ingest.py
writeups/: 01-building-fedramp-low-conmon-homelab.md  02-paramify-vs-diy.md
(+318 files in other folders)
